--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<html>
-<body>
-<h1>subdomain takeover</h1>
-</body>
+<!DOCTYPE html>
 </html>
+<head></head>
+<body>
+  <h1>Subdomain Takeover</h1>
+</body>
+</htmL>
